bk_ida/gccida/c0/reg_is_born
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_is_born/src/local-alloc.c:2567:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_is_born/src/local-alloc.c:2567:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_is_born/src/local-alloc.c:2572:1: error: use of undeclared identifier 'qty_0'
qty_0[*( ( int *)reg_qty + regno)].death = -1; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_is_born/src/local-alloc.c:2576:21: error: use of undeclared identifier 'machine_mode'
mark_life( regno, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 1); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_is_born/src/local-alloc.c:2576:36: error: expected expression
mark_life( regno, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 1); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_is_born/src/local-alloc.c:2578:26: error: use of undeclared identifier 'machine_mode'
post_mark_life( regno, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 1, birth, 2 * this_insn_number); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_is_born/src/local-alloc.c:2578:41: error: expected expression
post_mark_life( regno, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 1, birth, 2 * this_insn_number); 
                                        ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_is_born/src/obj/local-alloc.o] Error 1
